# smash-trial

./: .gitignore  .gitmodules  CMakeLists.txt
include/: compute_distance.hpp  jaqquard_dist.hpp  options.hpp  search.hpp  search_hll.hpp  sketch.hpp
src/: CMakeLists.txt  jaqquard_dist.cpp  main.cpp  matrixify_mash_output.cpp  mean_squared_error.cpp  search.cpp  search_hll.cpp  sort_matrix.cpp
